--- a/package.json
+++ b/package.json
@@ -47,13 +47,15 @@
         "ionic-angular": "3.1.1",
         "ionic-plugin-keyboard": "~2.2.1",
         "ionicons": "3.0.0",
+        "moment": "^2.18.1",
         "rxjs": "5.1.1",
         "sw-toolbox": "3.4.0",
         "zone.js": "^0.8.5"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.6",
-        "@ionic/cli-plugin-ionic-angular": "1.3.0",
+        "@ionic/cli-plugin-cordova": "1.4.0",
+        "@ionic/cli-plugin-ionic-angular": "1.3.1",
         "typescript": "~2.2.1"
     },
     "cordovaPlugins": [
