--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@ionic-native/geolocation": "^3.10.3",
         "@ionic-native/http": "^3.10.2",
         "@ionic-native/native-storage": "^3.10.3",
+        "@ionic-native/network": "^3.12.1",
         "@ionic-native/splash-screen": "3.4.2",
         "@ionic-native/status-bar": "3.4.2",
         "@ionic-native/vibration": "^3.9.2",
@@ -39,6 +40,7 @@
         "cordova-plugin-geolocation": "~2.1.0",
         "cordova-plugin-http": "^1.2.0",
         "cordova-plugin-nativestorage": "~2.2.2",
+        "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.1",
         "cordova-plugin-vibration": "~2.1.5",
@@ -79,7 +81,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-vibration": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-network-information": {}
         },
         "platforms": [
             "android"
