--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ionic-native/vibration": "^4.7.0",
     "@ionic/storage": "2.1.3",
     "chart.js": "^2.7.2",
+    "cordova-android": "6.3.0",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.2",
@@ -76,7 +77,8 @@
       "cordova-plugin-uniquedeviceid": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
