--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "@ionic/storage": "2.1.3",
     "chart.js": "^2.7.2",
     "cordova-android": "6.3.0",
-    "cordova-ios": "^4.5.4",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
-    "cordova-plugin-nativestorage": "^2.3.1",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-uniquedeviceid": "^1.3.2",
